[tool.poetry]
name = "img-generator"
version = "0.1.0"
description = ""
authors = ["CHOI VADIM <tsoivadim97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
replicate = "^0.25.2"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
